--- a/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
+++ b/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
@@ -54,7 +54,8 @@
     font-size: 12px;
     line-height: 16px;
 
-    @media screen and (min-width: 768px) {}
+    @media screen and (min-width: 768px) {
+    }
 }
 
 .dashboard__item__number {
