--- a/src/components/pages/DiaryPage/ProductTable/ProductTable.module.scss
+++ b/src/components/pages/DiaryPage/ProductTable/ProductTable.module.scss
@@ -2,107 +2,102 @@
 @import '../../../../scss/variables';
 @import '../../../../scss/colors';
 
-.product__container{
+.product__container {
     border-radius: $main-b-radius;
-        border: 1px solid rgba(239, 237, 232, 0.20);
-        background: rgba(239, 237, 232, 0.05);
-        padding: 16px;
+    border: 1px solid rgba(239, 237, 232, 0.2);
+    background: rgba(239, 237, 232, 0.05);
+    padding: 16px;
 
-        width: 335px;
-        max-height: 824px;
-        overflow-y: auto;
+    width: 335px;
+    max-height: 824px;
+    overflow-y: auto;
 
-            @media screen and (min-width: 768px) {
-                width: 704px;
-                max-height: 234px;
-                padding-top: 19px;
-                }
+    @media screen and (min-width: 768px) {
+        width: 704px;
+        max-height: 234px;
+        padding-top: 19px;
+    }
 
-                @media screen and (min-width: 1140px) {
-                width: 826px;
-                padding-top: 16px;
-                }
+    @media screen and (min-width: 1140px) {
+        width: 826px;
+        padding-top: 16px;
+    }
 }
 
-.container__header{
-display: flex;
-justify-content: space-between;
-margin-bottom: 22px;
-            @media screen and (min-width: 768px) {
-                    margin-bottom: 16px;
-                }
+.container__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+    @media screen and (min-width: 768px) {
+        margin-bottom: 16px;
+    }
 
     & h2 {
-    color: rgba(239, 237, 232, 0.50);
-    font-size: 14px;
-    line-height: 18px;
+        color: rgba(239, 237, 232, 0.5);
+        font-size: 14px;
+        line-height: 18px;
     }
 
     .button {
-display: flex;
-    align-items: center;
-    justify-content: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-background-color: transparent;
-color: $christmas-main-orange;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 18px;
-    border: 0;
+        background-color: transparent;
+        color: $christmas-main-orange;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 18px;
+        border: 0;
 
-    cursor: pointer;
+        cursor: pointer;
 
-                @media screen and (min-width: 768px) {
-                            font-size: 16px;
-                            line-height: 24px;
-                    }
-                
+        @media screen and (min-width: 768px) {
+            font-size: 16px;
+            line-height: 24px;
+        }
     }
 }
 
-.container__list{
-display: flex;
-flex-direction: column;
-gap: 40px;
+.container__list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 
-@media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) {
         gap: 8px;
     }
 
-& li{
-    display: flex;
-    flex-wrap: wrap;
+    & li {
+        display: flex;
+        flex-wrap: wrap;
 
         @media screen and (min-width: 768px) {
-                flex-direction: raw;
-                flex-wrap: nowrap;
+            flex-direction: raw;
+            flex-wrap: nowrap;
+        }
+    }
 
-            }
+    & div {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    & span {
+        margin-bottom: 9px;
+        margin-top: auto;
+    }
 }
-
-& div {
-display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-}
-
-
-& span {
-margin-bottom: 9px;
-margin-top: auto;
-}
-}
-
 
 .container__label {
     color: $christmas-hover-orange;
-        font-size: 12px;
-        line-height: 18px;
+    font-size: 12px;
+    line-height: 18px;
 
-        @media screen and (min-width: 768px) {
-            display: none;
-            }
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
 
 .container__input,
@@ -113,13 +108,13 @@ margin-top: auto;
     line-height: 18px;
     padding: 10px 14px;
     border-radius: $main-b-radius;
-    border: 1px solid rgba(239, 237, 232, 0.30);
+    border: 1px solid rgba(239, 237, 232, 0.3);
 
     @media screen and (min-width: 768px) {
         font-size: 16px;
-            line-height: 24px;
-            padding: 8px 14px;
-        }
+        line-height: 24px;
+        padding: 8px 14px;
+    }
 }
 
 .container__input {
@@ -127,43 +122,43 @@ margin-top: auto;
     margin-bottom: 16px;
 
     @media screen and (min-width: 375px) {
-            width: 297px;
-        }
+        width: 297px;
+    }
 
-                  @media screen and (min-width: 768px) {
-                    margin-bottom: 0;
-                  }
+    @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+    }
 }
 
 .container__input__small {
     width: 81px;
 
     @media screen and (min-width: 768px) {
-            width: 90px;
-        }
-                                @media screen and (min-width: 1140px) {
-                                    width: 105px;
-                                }
+        width: 90px;
+    }
+    @media screen and (min-width: 1140px) {
+        width: 105px;
+    }
 }
 
 .big-gap {
-margin-right: 16px;
+    margin-right: 16px;
 
     @media screen and (min-width: 768px) {
-            margin-right: 8px;
-        }
+        margin-right: 8px;
+    }
 }
 .small-gap {
     margin-right: 6px;
 
-        @media screen and (min-width: 768px) {
-                margin-right: 12px;
-            }
+    @media screen and (min-width: 768px) {
+        margin-right: 12px;
+    }
 }
 
 .green::before {
-    content: "";
-    background-color: #419B09;
+    content: '';
+    background-color: #419b09;
     border-radius: 50%;
     display: inline-block;
     width: 14px;
@@ -172,10 +167,9 @@ margin-right: 16px;
     vertical-align: middle;
 }
 
-
 .red::before {
-background-color: #E9101D;
-content: "";
+    background-color: #e9101d;
+    content: '';
     border-radius: 50%;
     display: inline-block;
     width: 14px;
@@ -185,21 +179,21 @@ content: "";
 }
 
 .title {
-@media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) {
         width: 204px;
     }
 
-        @media screen and (min-width: 1140px) {
-            width: 212px;
-        }
+    @media screen and (min-width: 1140px) {
+        width: 212px;
+    }
 }
 
 .category {
-@media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) {
         width: 128px;
     }
 
-            @media screen and (min-width: 1140px) {
-            width: 166px;
-        }
+    @media screen and (min-width: 1140px) {
+        width: 166px;
+    }
 }
