--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
@@ -1,23 +1,23 @@
-.category__list{
+.category__list {
     display: flex;
     gap: 28px;
 
-    & li a span{
+    & li a span {
         text-decoration: none;
-        color: rgba(239, 237, 232, 0.40);
-    
+        color: rgba(239, 237, 232, 0.4);
+
         font-size: 14px;
         line-height: 1.29; /* 128.571% */
-    };
-};
+    }
+}
 
 @media screen and (min-width: 768px) {
-.category__list{
-    gap: 32px;
+    .category__list {
+        gap: 32px;
 
-    & li a span{
-        font-size: 16px;
-        line-height: 1.5; /* 150% */
-    };
-    };
-};
+        & li a span {
+            font-size: 16px;
+            line-height: 1.5; /* 150% */
+        }
+    }
+}
