--- a/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
@@ -2,9 +2,9 @@
 @import '../../../../scss/mixins';
 @import '../../../../scss/variables';
 
-.exercises__container{
+.exercises__container {
     padding-top: 40px;
-};
+}
 
 .exercises_ul_collections {
     display: flex;
@@ -12,18 +12,18 @@
     margin: 0 auto;
     max-width: 335px;
     gap: 20px;
-};
+}
 
-.exercises__item{
+.exercises__item {
     position: relative;
     padding: 16px;
     flex-shrink: 0;
     border-radius: $main-b-radius;
-    border: 1px solid rgba(239, 237, 232, 0.20);
+    border: 1px solid rgba(239, 237, 232, 0.2);
     background: rgba(239, 237, 232, 0.05);
 
-    & .exercises__item_head{
-        color: #FFF;
+    & .exercises__item_head {
+        color: #fff;
 
         font-size: 12px;
         font-style: normal;
@@ -38,9 +38,9 @@
         border-radius: 4px;
         background: rgba(239, 237, 232, 0.05);
         margin-bottom: 33px;
-    };
+    }
 
-    & button{
+    & button {
         position: absolute;
         top: 16px;
         right: 16px;
@@ -55,109 +55,113 @@
         padding: 0;
         border: 0;
         background-color: transparent;
-    };
+    }
 
-    & h3{
+    & h3 {
         color: $snow-white;
 
-        font-feature-settings: 'clig' off, 'liga' off;
+        font-feature-settings:
+            'clig' off,
+            'liga' off;
         font-size: 20px;
         line-height: 1.2; /* 120% */
         margin-bottom: 8px;
 
         width: 240px;
-        overflow:hidden;
+        overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
 
-        svg{
+        svg {
             margin-right: 16px;
-        };
-    };
-};
+        }
+    }
+}
 
-.exercises_info{
+.exercises_info {
     display: block;
 
-    & p{
+    & p {
         display: inline-block;
-        color: rgba(239, 237, 232, 0.40);
+        color: rgba(239, 237, 232, 0.4);
 
-        font-feature-settings: 'clig' off, 'liga' off;
+        font-feature-settings:
+            'clig' off,
+            'liga' off;
         font-family: Roboto;
         font-size: 12px;
         line-height: 1.5; /* 150% */
         margin-right: 16px;
-    };
+    }
 
     & p:last-child {
         margin-right: 0;
-    };
+    }
 
-    & span{
+    & span {
         color: $snow-white;
-    };
-};
+    }
+}
 
 @media screen and (min-width: 768px) {
-.exercises__container{
-    padding: 0;
-    width: 704px;
-    margin: 0 auto;
-    height: 726px;
-    overflow-y: hidden;
-    overflow-y: scroll;
-};
+    .exercises__container {
+        padding: 0;
+        width: 704px;
+        margin: 0 auto;
+        height: 726px;
+        overflow-y: hidden;
+        overflow-y: scroll;
+    }
 
-.exercises_ul_collections {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 768px;
-    row-gap: 32px;
-    column-gap: 16px;
+    .exercises_ul_collections {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 768px;
+        row-gap: 32px;
+        column-gap: 16px;
 
-    & .exercises__item{
-        width: 335px;
+        & .exercises__item {
+            width: 335px;
 
-        & .exercises__item_head{
-            margin-bottom: 25px;
-        };
+            & .exercises__item_head {
+                margin-bottom: 25px;
+            }
 
-        & button{
-            font-size: 16px;
-            line-height: 1.5; /* 150% */
-            align-items: center;
-        };
+            & button {
+                font-size: 16px;
+                line-height: 1.5; /* 150% */
+                align-items: center;
+            }
 
-        & h3{
-            font-size: 24px;
-            line-height: 1.33; /* 133.333% */
-        };
-    };
-};
-};
+            & h3 {
+                font-size: 24px;
+                line-height: 1.33; /* 133.333% */
+            }
+        }
+    }
+}
 
 @media screen and (min-width: 1440px) {
-    .exercises__container{
+    .exercises__container {
         width: 850px;
         height: 487px;
         margin: 0;
-    };
+    }
 
     .exercises_ul_collections {
         max-width: 1440px;
         justify-content: left;
 
-        & .exercises__item{
+        & .exercises__item {
             width: 405px;
 
-            & .exercises__item_head{
+            & .exercises__item_head {
                 margin-bottom: 27px;
             }
-        };
-        & h3{
+        }
+        & h3 {
             width: 373px;
-        };
-    };
-};
+        }
+    }
+}
