--- a/src/components/pages/ExercisesPage/ExercisesSubcategoriesItem/ExercisesSubcategoriesItem.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesSubcategoriesItem/ExercisesSubcategoriesItem.module.scss
@@ -2,55 +2,59 @@
 @import '../../../../scss//mixins';
 @import '../../../../scss/variables';
 
-.subcategoriesItem{
+.subcategoriesItem {
     overflow: hidden;
     padding-top: 40px;
     padding-bottom: 80px;
-};
+}
 
-.subcategoriesItem__info{
+.subcategoriesItem__info {
     position: absolute;
-};
+}
 
 .subcategoriesItem__name {
     color: $snow-white;
 
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings:
+        'clig' off,
+        'liga' off;
     font-family: Roboto;
     font-size: 20px;
     line-height: 1.2; /* 120% */
     text-align: center;
-};
+}
 
 .subcategoriesItem__filter {
-    color: rgba(239, 237, 232, 0.40);
+    color: rgba(239, 237, 232, 0.4);
 
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings:
+        'clig' off,
+        'liga' off;
     font-family: Roboto;
     font-size: 12px;
     line-height: 1.5; /* 150% */
     text-align: center;
     margin-bottom: 2px;
-};
+}
 
 @media screen and (min-width: 375px) {
-.subcategoriesItem{
-    align-items: center;
-};
-};
+    .subcategoriesItem {
+        align-items: center;
+    }
+}
 
 @media screen and (min-width: 768px) {
-    .subcategoriesItem{
+    .subcategoriesItem {
         flex-direction: row;
         flex-wrap: wrap;
         row-gap: 32px;
         column-gap: 16px;
         padding-top: 0;
-    };
+    }
 
-        .subcategoriesItem__name {
-            font-size: 24px;
-            line-height: 1.33; /* 133.333% */
-        };
-};
+    .subcategoriesItem__name {
+        font-size: 24px;
+        line-height: 1.33; /* 133.333% */
+    }
+}
