--- a/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
+++ b/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
@@ -2,47 +2,45 @@
 @import '../../../../scss/mixins';
 @import '../../../../scss/variables';
 
-
- .list{
+.list {
     @include container();
     width: 375px;
     display: flex;
     flex-direction: column;
-    gap: 20px ;
+    gap: 20px;
     margin-top: 40px;
     margin-bottom: 80px;
 
     @media screen and (min-width: 768px) {
-            width: 776px;
-            height: 660px;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            overflow-x: hidden;
-            overflow-y: scroll;
-            gap: 0;
-            margin-bottom: 48px;
-            
-        };
+        width: 776px;
+        height: 660px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        gap: 0;
+        margin-bottom: 48px;
+    }
 
     @media screen and (min-width: 1440px) {
-            width: 850px;
-            padding: 0;
-            margin-left: 0;
-            height: 487px;
-            margin-top: 0;
-            margin-bottom: 81px;
-        };
-};
+        width: 850px;
+        padding: 0;
+        margin-left: 0;
+        height: 487px;
+        margin-top: 0;
+        margin-bottom: 81px;
+    }
+}
 
 .list::-webkit-scrollbar {
     width: 8px;
     height: 153px;
     border-radius: 12px;
-    background-color: #EFEDE81A;
-};
+    background-color: #efede81a;
+}
 
 .list::-webkit-scrollbar-thumb {
     border-radius: 12px;
-    background-color: #EF8964;
-};
+    background-color: #ef8964;
+}
