--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -3,32 +3,29 @@
 
 .dropdown {
     position: relative;
-   
 }
 
 .dropdown_button {
-position: relative;
-display: block;
-color: #EFEDE8;
-background-color: transparent;
-padding: 14px;
-width: 146px;
-height: 46px;
-border-radius: 12px;
-border: 1px solid#EFEDE84D;
-text-align: left;
-cursor: pointer;
- 
-@media screen and (min-width: 768px) {
-    width: 192px;
-    height: 52px;
+    position: relative;
+    display: block;
+    color: #efede8;
+    background-color: transparent;
+    padding: 14px;
+    width: 146px;
+    height: 46px;
+    border-radius: 12px;
+    border: 1px solid#EFEDE84D;
+    text-align: left;
+    cursor: pointer;
+
+    @media screen and (min-width: 768px) {
+        width: 192px;
+        height: 52px;
     }
 
     @media screen and (min-width: 1440px) {
-     
     }
-
-};
+}
 
 .dropdown_button::after {
     content: '';
@@ -39,50 +36,47 @@ cursor: pointer;
 
     width: 7px;
     height: 7px;
-    border-bottom: 2px solid #EFEDE8 ;
-    border-right: 2px solid #EFEDE8;
-    
+    border-bottom: 2px solid #efede8;
+    border-right: 2px solid #efede8;
+
     transform: rotate(45deg);
 
     pointer-events: none;
-};
+}
 
 .dropdown_list {
-   
     display: flex;
     position: absolute;
     left: 0;
     top: 52px;
 
-    
     flex-direction: column;
     gap: 8px;
     width: 100%;
-   height: 228px;
-   background-color: #1C1C1C;
-   color: #EFEDE8;
-   border-radius: 12px;
-   padding: 14px 19px 14px 14px;
+    height: 228px;
+    background-color: #1c1c1c;
+    color: #efede8;
+    border-radius: 12px;
+    padding: 14px 19px 14px 14px;
 
     overflow-x: hidden;
-        overflow-y: scroll;
+    overflow-y: scroll;
 
-   z-index: 1;
-};
+    z-index: 1;
+}
 .dropdown_list_visible {
     display: none;
-};
+}
 
 .dropdown_list::-webkit-scrollbar {
     width: 8px;
     height: 147px;
-   margin-right: 7px;
- 
-};
+    margin-right: 7px;
+}
 .dropdown_list::-webkit-scrollbar-thumb {
     border-radius: 12px;
-    background-color:#EFEDE81A;
-};
+    background-color: #efede81a;
+}
 
 .dropdown_item {
     color: $snow-white;
@@ -100,14 +94,15 @@ cursor: pointer;
     &:active {
         background-color: $lonely-modal-gray;
     }
-    
+
     @media screen and (min-width: 768px) {
         font-size: 16px;
         line-height: 1.5;
-        }
-    
-        @media screen and (min-width: 1440px) {}
-};
+    }
+
+    @media screen and (min-width: 1440px) {
+    }
+}
 
 .dropdown_input {
     display: none;
