fix(products_page)update

--- a/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
@@ -21,7 +21,8 @@
 
     @media screen and (min-width: 1440px) {
            width: 1440px;
-           padding-top: 0;
+           padding: 0;
+           margin-left: 300px;
         }
 
 };
