--- a/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
+++ b/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
@@ -100,6 +100,7 @@
     font-weight: 400;
     font-size: 20;
     line-height: 1.2;
+    text-transform: capitalize;
 }
 
 
@@ -118,6 +119,7 @@
     & span {
         color: #EFEDE8;
         margin-left: 4px;
+        text-transform: capitalize;
     }
 
 };
