--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -48,26 +48,28 @@ cursor: pointer;
 };
 
 .dropdown_list {
-   
     display: flex;
     position: absolute;
     left: 0;
     top: 52px;
-
-    
     flex-direction: column;
     gap: 8px;
     width: 100%;
-   height: 228px;
-   background-color: #1C1C1C;
-   color: #EFEDE8;
-   border-radius: 12px;
-   padding: 14px 19px 14px 14px;
+    height: 228px;
+    background-color: #1C1C1C;
+    color: #EFEDE8;
+    border-radius: 12px;
+    padding: 14px 19px 14px 14px;
 
     overflow-x: hidden;
-        overflow-y: scroll;
+    overflow-y: scroll;
+    z-index: 1;
 
-   z-index: 1;
+    @media screen and (min-width: 768px) {
+           height: 276px;
+        }
+    
+        @media screen and (min-width: 1440px) {}
 };
 .dropdown_list_visible {
     display: none;
@@ -90,6 +92,7 @@ cursor: pointer;
     font-size: 14px;
     line-height: 1.3;
     cursor: pointer;
+    text-transform: capitalize;
 
     @include transition();
 
