--- a/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
+++ b/src/components/pages/ProductsPage/ProductsFilters/ProductsFilters.module.scss
@@ -3,19 +3,16 @@
 @import '../../../../scss/variables';
 
 .form_container {
-    @include container();
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    width: 375px;
     gap: 16px;
-    margin-right: auto;
-    margin-left: auto;
     padding-top: 40px;
+    max-width: 400px;
 
     @media screen and (min-width: 768px) {
         width: 768px;
-        flex-wrap: none;
+        flex-wrap: nowrap;
     }
 
     @media screen and (min-width: 1440px) {
