--- a/src/components/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/components/pages/ProductsPage/ProductsPage.module.scss
@@ -1,5 +1,12 @@
 .products_page_container {
     margin-top: 40px;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+
+    & h2 {
+        max-width: fit-content;
+    }
     @media screen and (min-width: 768px) {
         margin-top: 70px;
     }
