--- a/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
+++ b/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
@@ -23,6 +23,7 @@
         overflow-y: scroll;
         gap: 0;
         margin-bottom: 48px;
+        justify-content: space-evenly;
     }
 
     @media screen and (min-width: 1440px) {
