--- a/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
+++ b/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
@@ -37,6 +37,10 @@
     @media screen and (min-width: 768px) {
         margin-right: 16px;
         margin-bottom: 32px;
+
+        &:nth-child(even) {
+            margin-right: 0;
+        }
     }
 
     @media screen and (min-width: 1440px) {
