--- a/src/components/pages/ProfilePage/UserCard/UserCard.module.scss
+++ b/src/components/pages/ProfilePage/UserCard/UserCard.module.scss
@@ -167,7 +167,7 @@
         font-weight: 400;
         font-size: 12px;
         line-height: 1.3;
-        color: $snow-alpha-white;
+        color: rgba(239, 237, 232, 0.80)
     }
 }
 
