--- a/src/components/pages/ProductsPage/SuccessModal/SuccessModal.module.scss
+++ b/src/components/pages/ProductsPage/SuccessModal/SuccessModal.module.scss
@@ -8,22 +8,34 @@
    align-items: center;
 
     background-image: url('../../../../assets/images/avocado.png');
-        background-repeat: no-repeat;
-background-position: center 48px;
+    background-repeat: no-repeat;
+    background-position: center 48px;
     background-size: 123px 97px;
 
-padding: 48px 16px;
-width: 335px;
-height: 362px;
+    padding: 48px 16px;
+    width: 335px;
+    height: 362px;
+
+    @media screen and (min-width: 768px) {
+    width: 430px;
+    height: 428px;
+    padding: 64px 16px;
+
+    background-position: center 64px;
+        }
 
 & h2 {
     margin-top: 100px;
-color: $snow-white;
+    margin-bottom: 16px;
+    color: $snow-white;
     font-size: 24px;
 
     font-weight: 700;
     line-height: 32px;
 
+    @media screen and (min-width: 768px) {
+            margin-top: 116px;
+        }
 }
 }
 
@@ -32,25 +44,26 @@ color: $snow-white;
     color: rgba(239, 237, 232, 0.4);
     margin-bottom: 24px;
 
+    & span{
+    color: $christmas-main-orange;
+    }
+
     @media screen and (min-width: 768px) {
-        display: flex;
-        margin-bottom: 64px;
+    margin-bottom: 32px;
     }
 }
 
 .button {
-    display: flex;
+display: flex;
 background-color: transparent;
 border: none;
-align-items: center
+align-items: center;
 
 & a {
 color: rgba(239, 237, 232, 0.30);
-
-    font-size: 14px;
-
-    font-weight: 400;
-    line-height: 18px;
+font-size: 14px;
+font-weight: 400;
+line-height: 18px;
 }
 
 }
