--- a/src/components/auth/SignIn/SignIn.module.scss
+++ b/src/components/auth/SignIn/SignIn.module.scss
@@ -5,8 +5,15 @@
 .signin_container {
     @include container();
 
-    padding-top: 80px;
+    padding-top: 10px;
 
+    @media screen and (min-height: 710px){
+            padding-top: 80px;
+        }
+
+                @media screen and (min-width: 768px) {
+                padding-top: 80px;
+                }
     & p {
         font-size: 14px;
         font-weight: 400;
