--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
@@ -5,11 +5,10 @@
     & li a span {
         text-decoration: none;
         color: rgba(239, 237, 232, 0.4);
-
         font-size: 14px;
         line-height: 1.29; /* 128.571% */
-    }
-}
+    };
+};
 
 @media screen and (min-width: 768px) {
     .category__list {
@@ -18,6 +17,6 @@
         & li a span {
             font-size: 16px;
             line-height: 1.5; /* 150% */
-        }
-    }
-}
+        };
+    };
+};
