--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.scss
@@ -5,8 +5,6 @@
 li a {
     text-decoration: none;
     color: rgba(239, 237, 232, 0.4);
-
-    font-family: Roboto;
     font-size: 14px;
     line-height: 1.29; /* 128.571% */
     position: relative;
@@ -15,7 +13,7 @@ li a {
         color: $christmas-hover-orange;
 
         @include transition();
-    }
+    };
 
     &.active span {
         color: $snow-white;
@@ -24,7 +22,7 @@ li a {
 
         &:hover {
             color: $lonely-gray;
-        }
+        };
 
         &::before {
             content: '';
@@ -36,13 +34,13 @@ li a {
             border-radius: 2px;
             background: $christmas-hover-orange;
             bottom: -4px;
-        }
-    }
-}
+        };
+    };
+};
 
 @media screen and (min-width: 768px) {
     a {
         font-size: 16px;
         line-height: 1.5; /* 150% */
-    }
-}
+    };
+};
