--- a/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
+++ b/src/components/pages/DiaryPage/DiaryDashboard/DiaryDashboard.module.scss
@@ -62,6 +62,11 @@
     font-size: 12px;
     line-height: 16px;
 
+    & svg use {
+        stroke: $christmas-main-orange;
+        fill: $christmas-main-orange;
+    }
+
     @media screen and (min-width: 768px) {
     }
 }
