--- a/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesCategories/ExercisesCategories.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../scss/mixins';
+
 .category__list {
     display: flex;
     gap: 28px;
@@ -17,6 +19,8 @@
         & li a span {
             font-size: 16px;
             line-height: 1.5; /* 150% */
+
+            @include transition();
         };
     };
 };
