refactoring(ALl): verify page added

--- a/src/components/global/Header/Header.module.scss
+++ b/src/components/global/Header/Header.module.scss
@@ -149,6 +149,7 @@
 
     & .header__settings a use {
         stroke: $snow-alpha-white;
+        fill: none;
 
         @include transition();
     }
