--- a/src/components/pages/DiaryPage/ExercisesTable/ExercisesTable.module.scss
+++ b/src/components/pages/DiaryPage/ExercisesTable/ExercisesTable.module.scss
@@ -135,10 +135,6 @@ a {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
 }
 
 .container__list li:not(:first-child) .container__label {
@@ -156,6 +152,9 @@ a {
     padding: 10px 14px;
     border-radius: $main-b-radius;
     border: 1px solid rgba(239, 237, 232, 0.3);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @media screen and (min-width: 768px) {
         font-size: 16px;
