--- a/src/components/global/App/App.module.scss
+++ b/src/components/global/App/App.module.scss
@@ -3,7 +3,7 @@
     font-weight: 400;
     line-height: 1.3;
 
-    max-width: 280px;
+    min-width: 280px;
     display: flex;
     justify-content: center;
 }
