refactoring(UserCard): avatar logic fixed

--- a/src/components/pages/ProfilePage/UserCard/UserCard.module.scss
+++ b/src/components/pages/ProfilePage/UserCard/UserCard.module.scss
@@ -50,8 +50,8 @@
     }
 
     & img {
-        max-width: 90px;
-        max-height: 90px;
+        width: 90px;
+        height: 90px;
 
         position: relative;
         z-index: -1;
