--- a/src/components/pages/DiaryPage/ProductTable/ProductTable.module.scss
+++ b/src/components/pages/DiaryPage/ProductTable/ProductTable.module.scss
@@ -8,20 +8,17 @@
     background: rgba(239, 237, 232, 0.05);
     padding: 16px 12px;
 
-        width: 335px;
-        min-height: 335px;
-        max-height: 824px;
-        overflow-y: auto;
+        max-width: 380px;
 
             @media screen and (min-width: 768px) {
-                width: 704px;
+                min-width: 704px;
                 max-height: 234px;
                 padding-top: 19px;
                 min-height: 234px;
                 }
 
     @media screen and (min-width: 1140px) {
-        width: 826px;
+        min-width: 826px;
         padding-top: 16px;
     }
 }
@@ -95,9 +92,19 @@ margin-bottom: 22px;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    max-height: 824px;
+    overflow-y: auto;
+    min-height: 335px;
 
     @media screen and (min-width: 768px) {
         gap: 8px;
+        overflow-y: auto;
+        min-height: 120px;
+        max-height: 150px;
+    }
+
+    @media screen and (min-width: 1440px) {
+        overflow-x: clip;
     }
 
     & li {
