--- a/src/components/auth/SignUp/SignUp.module.scss
+++ b/src/components/auth/SignUp/SignUp.module.scss
@@ -171,3 +171,29 @@
         }
     }
 }
+
+.verify {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & p {
+        color: $lonely-gray;
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.2;
+
+        text-align: center;
+
+        & span {
+            font-weight: 600;
+            color: $christmas-hover-orange;
+        }
+    }
+
+    &__conditions {
+        max-width: 420px;
+        margin: 12px 0;
+    }
+}
