--- a/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesList/ExercisesList.module.scss
@@ -4,7 +4,7 @@
 
 .exercises__container {
     padding-top: 40px;
-};
+}
 
 .exercises_ul_collections {
     display: flex;
@@ -13,7 +13,7 @@
     margin: 0 auto;
     max-width: 335px;
     gap: 20px;
-};
+}
 
 .exercises__item {
     position: relative;
@@ -36,7 +36,7 @@
         border-radius: 4px;
         background: rgba(239, 237, 232, 0.05);
         margin-bottom: 33px;
-    };
+    }
 
     & button {
         position: absolute;
@@ -51,7 +51,7 @@
         padding: 0;
         border: 0;
         background-color: transparent;
-    };
+    }
 
     & h3 {
         color: $snow-white;
@@ -68,9 +68,9 @@
 
         svg {
             margin-right: 16px;
-        };
-    };
-};
+        }
+    }
+}
 
 .exercises_info {
     display: block;
@@ -85,27 +85,27 @@
         font-size: 12px;
         line-height: 1.5; /* 150% */
         margin-right: 16px;
-    };
+    }
 
     & p:last-child {
         margin-right: 0;
-    };
+    }
 
     & span {
         color: $snow-white;
-    };
-};
+    }
+}
 
 @media screen and (min-width: 768px) {
-.exercises__container{
-    padding: 0;
-    width: 704px;
-    margin: 0 auto;
-    max-height: 726px;
-    height: fit-content;
-    overflow-y: hidden;
-    overflow-y: scroll;
-};
+    .exercises__container {
+        padding: 0;
+        width: 704px;
+        margin: 0 auto;
+        max-height: 726px;
+        height: fit-content;
+        overflow-y: hidden;
+        overflow-y: scroll;
+    }
 
     .exercises_ul_collections {
         flex-direction: row;
@@ -120,26 +120,26 @@
 
             & .exercises__item_head {
                 margin-bottom: 25px;
-            };
+            }
 
             & button {
                 font-size: 16px;
                 line-height: 1.5; /* 150% */
                 align-items: center;
-            };
+            }
 
             & h3 {
                 font-size: 24px;
                 line-height: 1.33; /* 133.333% */
-            };
-        };
-    };
-};
+            }
+        }
+    }
+}
 
 .button__start {
     @include transition();
 
-    &:hover  {
+    &:hover {
         color: $silent-gray;
     }
 
@@ -149,7 +149,7 @@
 
     & svg use {
         stroke: $christmas-main-orange;
-        
+
         @include transition();
     }
 
@@ -170,41 +170,41 @@
 
         // width: 100%;
         // height: 100vh;
-        
+
         // background-image: url('../../../../assets/images/side-view-people-training-gym\ 1-phone-min.jpg');
         // background-repeat: no-repeat;
         // background-position: bottom right;
         // position: relative;
         // background-size: contain;
-    
+
         // @media (min-device-pixel-ratio: 2),
         //     (min-resolution: 192dpi),
         //     (min-resolution: 2dppx) {
         //     background-image: url('../../../../assets/images/side-view-people-training-gym\ 1-phone-2-min.jpg');
         // }
-    
+
         // @media screen and (min-width: 768px) {
         //     background-image: url('../../../../assets/images/side-view-people-training-gym-tablet-min.jpg');
         //     background-size: contain;
-    
+
         //     @media (min-device-pixel-ratio: 2),
         //         (min-resolution: 192dpi),
         //         (min-resolution: 2dppx) {
         //         background-image: url('../../../../assets/images/side-view-people-training-gym-tablet-2-min.jpg');
         //     }
         // }
-    
+
         // @media screen and (min-width: 1440px) {
         //     background-image: url('../../../../assets/images/side-view-people-training-gym\ 1-desk-min.jpg');
         //     background-size: contain;
-    
+
         //     @media (min-device-pixel-ratio: 2),
         //         (min-resolution: 192dpi),
         //         (min-resolution: 2dppx) {
         //         background-image: url('../../../../assets/images/side-view-people-training-gym\ 1-desk-2-min.jpg');
         //     }
         // }
-    };
+    }
 
     .exercises_ul_collections {
         max-width: 1440px;
@@ -215,10 +215,10 @@
 
             & .exercises__item_head {
                 margin-bottom: 27px;
-            };
+            }
         }
         & h3 {
             width: 373px;
-        };
-    };
-};
+        }
+    }
+}
