--- a/src/components/pages/ExercisesPage/ExercisesPage.module.scss
+++ b/src/components/pages/ExercisesPage/ExercisesPage.module.scss
@@ -3,7 +3,7 @@
 
 .exercises {
     position: relative;
-};
+}
 
 .exercises__categories {
     display: flex;
@@ -11,7 +11,7 @@
     gap: 20px;
     width: 320px;
     padding-top: 40px;
-};
+}
 
 .exercises__button_back {
     display: flex;
@@ -24,70 +24,68 @@
         stroke: #efede866;
 
         @include transition();
-    };
+    }
 
     &:hover svg use {
         stroke: $christmas-hover-orange;
-    };
+    }
 
     &:active svg use {
         stroke: $christmas-main-orange;
-    };
+    }
 
     & button {
-        color: rgba(239, 237, 232, 0.40);
+        color: rgba(239, 237, 232, 0.4);
         font-size: 14px;
         line-height: 1.29; /* 128.571% */
         background-color: transparent;
-        border: 0
-
-    };
-        @include transition();
-
+        border: 0;
+    }
+    @include transition();
 
     &:hover p {
         color: $christmas-hover-orange;
-    };
+    }
 
     &:active p {
         color: $christmas-main-orange;
-    };
-};
+    }
+}
 @media screen and (min-width: 375px) {
     .exercises__categories {
         width: 100%;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-    };
-};
+    }
+}
 
 @media screen and (min-width: 768px) {
     .exercises__categories {
         padding-top: 72px;
         padding-bottom: 64px;
-    };
+    }
 
     .exercises__button_back {
-        top:32px;
+        top: 32px;
 
-        & button{
+        & button {
             font-size: 16px;
             line-height: 1.5; /* 150% */
-        };
-    };
-};
+        }
+    }
+}
 
 @media screen and (min-width: 1440px) {
     .exercises {
         overflow-y: hidden;
-    };
+    }
 
     .exercises__categories {
         padding-bottom: 32px;
-    };
+    }
 
     .exercises__button_back {
         top: 36px;
-    };
-};
+    }
+}
